--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,11 @@
 body {
     background-color: hsl(212, 45%, 89%);
     font-family: 'Outfit', sans-serif;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
 }
 
 h3 {
@@ -8,8 +13,9 @@ h3 {
 }
 
 img {
-    width: 250px;
+    width: 100%;
     border-radius: 10px;
+    display: block;
 }
 
 p {
@@ -26,7 +32,7 @@ a:hover {
 }
 
 .container {
-    width: 20%;
+    max-width: 320px;
     margin: auto;
     background-color: hsl(0, 0%, 100%);
     padding: 12px;
